Reduce the logo size to avoid overlaps

--- a/static/css/index-nav.css
+++ b/static/css/index-nav.css
@@ -277,7 +277,7 @@
 }
 
 .navbar-brand .logo, .navbar-brand .logo-alt {
-  max-height: 70px;
+  max-height: 60px;
   display: block;
 }
 
